# SparkOS

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  bochs.disk  bochsout.txt  makefile
IDEconfig/: gdb.run.xml  run.run.xml
SparkOS/init/: CMakeLists.txt  init.S  loader.S  mbr.S
SparkOS/kernel/: CMakeLists.txt  bootpack.c  naskfunc.S  test.S
img/: hd60M.img
script/: clean_img.sh  create&run.sh  init.sh  run.sh  write_img.sh
src/: makefile
src/commom/: global.h  globle.h  type.h
src/init/: CMakeLists.txt  Makefile  head.S  init.S  loader.S  place.c
src/kernel/: CMakeLists.txt  Makefile  bootpack.c  font.S  kernel_entry.c  naskfunc.S
src/kernel/background/: background.c  background.h
src/kernel/font/: font.c  font.h
src/kernel/int/: int.S  int.c  int.h
src/kernel/keyboard/: keyboard.c  keyboard.h
src/kernel/mouse/: mouse.c  mouse.h
src/kernel/time/: time.c  time.h
src/kernel/utils/: print_s.c  print_s.h  serial_print.c  serial_print.h  stringUtils.c  stringUtils.h  utils.S  utils.c  utils.h
